add: Put LLinearLayoutV to the editor

--- a/lib/src/main/res/layout/editor.xml
+++ b/lib/src/main/res/layout/editor.xml
@@ -108,31 +108,26 @@
         </LinearLayout>
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/constraintLayout4"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="500dp"
         android:layout_marginTop="16dp"
         android:orientation="vertical"
+        android:background="#FFFFFF"
+        android:elevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="w,9:16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/dock"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:layout_conversion_absoluteHeight="731dp"
         tools:layout_conversion_absoluteWidth="365dp">
 
-        <LinearLayout
-            android:id="@+id/editor"
-            android:layout_width="720px"
-            android:layout_height="1280px"
-            android:background="#fff"
-            android:elevation="3dp"
-            android:orientation="vertical"
-            android:layout_marginBottom="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_conversion_absoluteHeight="488dp"
-            tools:layout_conversion_absoluteWidth="274dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.openblocks.module.layoutedit.LLinearLayoutV
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
