--- a/lib/src/main/res/layout/editor.xml
+++ b/lib/src/main/res/layout/editor.xml
@@ -111,23 +111,24 @@
     <LinearLayout
         android:id="@+id/constraintLayout4"
         android:layout_width="0dp"
-        android:layout_height="500dp"
+        android:layout_height="400dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:orientation="vertical"
+        android:layout_marginEnd="16dp"
+        android:animateLayoutChanges="true"
         android:background="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:elevation="3dp"
+        android:orientation="vertical"
         app:layout_constraintDimensionRatio="w,9:16"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/dock"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         tools:layout_conversion_absoluteHeight="731dp"
         tools:layout_conversion_absoluteWidth="365dp">
 
         <com.openblocks.module.layoutedit.LLinearLayoutV
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
